; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/smbfs/lib/smb/extr_rap.c_smb_rap_rqparam_z.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/smbfs/lib/smb/extr_rap.c_smb_rap_rqparam_z.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.smb_rap = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.smb_rap*, i8*)* @smb_rap_rqparam_z to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @smb_rap_rqparam_z(%struct.smb_rap* %0, i8* %1) #0 {
  %3 = alloca %struct.smb_rap*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  store %struct.smb_rap* %0, %struct.smb_rap** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load i8*, i8** %4, align 8
  %7 = call i32 @strlen(i8* %6)
  %8 = add nsw i32 %7, 1
  store i32 %8, i32* %5, align 4
  %9 = load i8*, i8** %4, align 8
  %10 = load %struct.smb_rap*, %struct.smb_rap** %3, align 8
  %11 = getelementptr inbounds %struct.smb_rap, %struct.smb_rap* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = load i32, i32* %5, align 4
  %14 = call i32 @bcopy(i8* %9, i32 %12, i32 %13)
  %15 = load i32, i32* %5, align 4
  %16 = load %struct.smb_rap*, %struct.smb_rap** %3, align 8
  %17 = getelementptr inbounds %struct.smb_rap, %struct.smb_rap* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = add nsw i32 %18, %15
  store i32 %19, i32* %17, align 4
  %20 = load i32, i32* %5, align 4
  %21 = load %struct.smb_rap*, %struct.smb_rap** %3, align 8
  %22 = getelementptr inbounds %struct.smb_rap, %struct.smb_rap* %21, i32 0, i32 1
  %23 = load i32, i32* %22, align 4
  %24 = add nsw i32 %23, %20
  store i32 %24, i32* %22, align 4
  ret i32 0
}

declare dso_local i32 @strlen(i8*) #1

declare dso_local i32 @bcopy(i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
